--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html>
 
 <head>
-    <title>sabina hasan</title>
-    <link rel="stylesheet" href="style.css">
-
+   <title>sabina hasan world</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <p>Here is a first paragraph of text.</p>
+   <section class="top bannar">
+      <div class="half-width">
+         <h1>well come </h1>
+         <h1> <span class="orange-color">sabina hasan </span>world </h1>
+         <h3>building climber and train stopper</h3>
+         <p>this is work is very important and
+            practic and practic i am should be hard working
+            time is very important
+            this is work is very important and
+            practic and practic i am should be hard working
+            time is very important </p>
+         <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Hire Me</a>
+      </div>
+      <div class="half-width">
+         <img src="image/jhankar2.png" alt="">
+      </div>
 
+   </section>
 </body>
 
 </html>
