--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   <section class="top bannar">
+   <section class="top -bannar">
       <div class="half-width">
          <h1>well come </h1>
          <h1> <span class="orange-color">sabina hasan </span>world </h1>
@@ -25,6 +25,22 @@
       </div>
       <div class="half-width">
          <img src="image/jhankar2.png" alt="">
+      </div>
+   </section>
+   <section class="dream-big">
+
+      <div class="half-width"><img src="image/sabina.png" alt="">
+      </div>
+
+      <div class="half-width">
+         <h1>Dream big</h1>
+         <h2>Become a web developer</h2>
+         <p>Boom. No more time wasted on screening CVs and pre-qualifying interviews.
+            We automatically grade and rank your candidates. In the time it takes to savor a cup of coffee, you can
+            watch video
+            responses to custom questions.
+            Our screening process automation lets you focus on the best people for the job.</p>
+         <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Download Resume</a>
       </div>
 
    </section>
