--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   <section class="top -bannar">
+   <section class="top -bannar flexible-container">
       <div class="half-width">
          <h1>well come </h1>
          <h1> <span class="orange-color">sabina hasan </span>world </h1>
@@ -27,12 +27,12 @@
          <img src="image/jhankar2.png" alt="">
       </div>
    </section>
-   <section class="dream-big">
 
-      <div class="half-width"><img src="image/sabina.png" alt="">
+   <section class=" dream-big flexible-container">
+      <div>
+         <img src="image/sabina.png" alt="">
       </div>
-
-      <div class="half-width">
+      <div>
          <h1>Dream big</h1>
          <h2>Become a web developer</h2>
          <p>Boom. No more time wasted on screening CVs and pre-qualifying interviews.
@@ -41,6 +41,31 @@
             responses to custom questions.
             Our screening process automation lets you focus on the best people for the job.</p>
          <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Download Resume</a>
+      </div>
+   </section>
+   <section class="Experiance area">
+      <h1>Experiances</h1>
+
+      <div class="flexible-container">
+         <div class="half-width">
+            <h1>Full stak developer </h1>
+            <h3 class="orange-color">2022-presnt | pro lavel developer</h3>
+            <p>Boom. No more time wasted on screening CVs and pre-qualifying interviews.
+               We automatically grade and rank your candidates. In the time it takes to savor a cup of coffee, you can
+               watch video
+               responses to custom questions.
+               Our screening pro</p>
+         </div>
+
+         <div class="half-width">
+            <h1> Baby Web developer </h1>
+            <h3 class="orange-color">2022-2024 | pro larnar developer</h3>
+            <p>Boom. No more time wasted on screening CVspre-qualifying
+               We automatically grade and rank your candidates. In the time it takes to savor a cup of coffee, you can
+               watch video
+               responses to custom questions.
+               Our screening pro</p>
+         </div>
       </div>
 
    </section>
