--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
          <img src="image/jhankar2.png" alt="">
       </div>
    </section>
+   <section class="dream-big">
+      <div class="half-width">
+         <img src="image/sabina.png" alt="">
+      </div>
+
+      <div class="half-width">
+         <h1> Dream big</h1>
+         <h3>Become a good vancer</h3>
+         <p>When designing your website, the most important consideration is how your customers will use and experience
+            your brand
+            online. PIER takes time to clearly understand your customer’s wants and needs straight from the horse’s
+            mouth to uncover
+            new insights. With this clarity, our design is informed by functionality needs to exceed user’s
+            expectations, moving
+            intent to action</p>
+         <a class="link-button" target="_blank" href="">download submit</a>
+      </div>
+   </section>
 
 </body>
 
