--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-   <section class="top-bannar">
+   <section class="top-bannar flexble-container ">
       <div class="half-width">
          <h1>well come </h1>
          <h1>
@@ -32,7 +32,7 @@
          <img src="image/jhankar2.png" alt="">
       </div>
    </section>
-   <section class="dream-big">
+   <section class="dream-big flexble-container">
       <div class="half-width">
          <img src="image/sabina.png" alt="">
       </div>
@@ -48,6 +48,35 @@
             expectations, moving
             intent to action</p>
          <a class="link-button" target="_blank" href="">download submit</a>
+      </div>
+   </section>
+   <section class=" New experiance">
+      <h1>New Design</h1>
+      <div class="flexble-container">
+         <div class="half-width">
+            <h1>full stake developer </h1>
+            <h3>2022-present developer</h3>
+            <p>First impressions count and your online presence is most likely the first place customers, prospects,
+               suppliers,
+               potential employees and business partners get to know your brand. Your website is also the epicentre for
+               marketing
+               activity and should articulate clearly what you do and what you represent. PIER supports clients to
+               create
+               beautiful,
+               considered website design that inspires</p>
+         </div>
+
+         <div class="half-width">
+            <h1>Baby web developer </h1>
+            <h3>2022 -present | pro web developer</h3>
+            <p>PIER takes time to clearly understand your customer’s wants and needs straight from the horse’s
+               mouth to
+               uncover
+               new insights. With this clarity, our design is informed by functionality needs to exceed user’s
+               expectations,
+               moving</p>
+
+         </div>
       </div>
    </section>
 
