baby web developer

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
          <a class="link-button" target="_blank" href="">download submit</a>
       </div>
    </section>
-   <section class=" New experiance">
-      <h1>New Design</h1>
+   <section class=" New-experiance">
+      <h1>New experiance</h1>
       <div class="flexble-container">
-         <div class="half-width">
+         <div id="full-stake-developer" class="baby-text">
             <h1>full stake developer </h1>
-            <h3>2022-present developer</h3>
+            <h3 class="blue-color">2022-present developer</h3>
             <p>First impressions count and your online presence is most likely the first place customers, prospects,
                suppliers,
                potential employees and business partners get to know your brand. Your website is also the epicentre for
@@ -66,9 +66,9 @@
                considered website design that inspires</p>
          </div>
 
-         <div class="half-width">
+         <div id="Baby-web-developer" class="baby-text">
             <h1>Baby web developer </h1>
-            <h3>2022 -present | pro web developer</h3>
+            <h3 class="blue-color">2022 -present | pro web developer</h3>
             <p>PIER takes time to clearly understand your customer’s wants and needs straight from the horse’s
                mouth to
                uncover
