--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
          </div>
       </div>
    </section>
-
 </body>
+<footer>
+   <p>paker peter 2023 initials
+   </p>
+
+</footer>
 
 </html>
